# odx

./: .gitignore  Dockerfile  LICENSE.txt  NOTICE.txt  README.md  pyproject.toml
conf/base/: logging.yml  spark.yml
conf/base/catalog/: README.md  odx.test.yml  odx.yml
conf/base/parameters/: odx.test.yml  odx.yml
notebooks/: .gitignore  compare_short_trips.ipynb  prep_data_sensitivity_analysis.ipynb  sensitivity_analysis.ipynb
scripts/: download_and_prep_gtfs.py  simulate_avl_from_gtfs.py
src/odx/: SparkContext.py  __init__.py  __main__.py  pipeline_registry.py  settings.py
src/odx/pipelines/: __init__.py
src/odx/pipelines/odx/infer/: README.md  impossible_conditions_and_descriptions.py  nodes.py  pipeline.py  utils.py
src/odx/pipelines/odx/prepare/: README.md  nodes.py  pipeline.py  utils.py
src/tests/: __init__.py  test_run.py
