[tool.kedro]
package_name = "odx"
project_name = "odx"
project_version = "0.18.2"

[tool.poetry]
name = "odx"
version = "0.1.0"
description = ""
authors = ["UrbanLogiq <info@urbanlogiq.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
geopandas = "^0.9.0"
kedro = { git = "https://github.com/urbanlogiq/kedro.git", branch = "0.18.2-ul" }
tqdm = "^4.62.3"
pygeos = "^0.12.0"
loguru = "^0.6.0"
joblib = "^1.1.0"
timezonefinder = {extras = ["numba"], version = "^5.2.0"}
haversine = "^2.5.1"
numpy = "^1.21.0"
pyspark = "3.2.1"
hdfs = "^2.7.0"
kedro-viz = "^5.1.1"
cffi = "^1.15.1"
scikit-learn = "^1.3.0"
pathspec = "0.9.0"
pandas = "2.0.3"
pyarrow = "^13.0.0"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/odx -ra"""
